@@ -1,3 +1,8 @@
+2000-04-29  Alexander V. Lukyanov  <lav@yars.free.net>
+
+	* Http.cc: add Cookie support; allow disabling user-agent.
+	* resource.cc: new setting http:cookie.
+
 2000-04-26  Alexander V. Lukyanov  <lav@yars.free.net>
 
 	* Http.cc: don't disable ranges always, check condition before
